@@ -1,3 +1,9 @@
+2009-01-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
+	(mb_wm_comp_mgr_clutter_client_repair_real): Always use bounding box
+	since Clutter uses it as well.
+
 2009-01-19  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 
 	Added documentation comments in Doxygen-friendly format.
